Containers/response-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: response
  labels:
    app: response
spec:
  selector:
    matchLabels:
      app: response
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: response
    spec:
      containers:
        - name: response
          image: gcr.io/PROJECT_ID/IMAGE:TAG
          ports:
            - containerPort: 8080
