Containers/response-service/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: response
spec:
  hosts:
    - "*"
  gateways:
    - mdag-gateway
  http:
    - match:
        - uri:
            exact: /api/hello
        route:
          - destination:
              host: response
              port:
                number: 8080
